--- a/21.01.17 TIL_short.md
+++ b/21.01.17 TIL_short.md
@@ -28,5 +28,5 @@
 
 # Velog 작성
 
-1. TIL #38 __name__=='__main__' 의 의미
+1. TIL #38 `__name__=='__main__'` 의 의미
 2. TIL #39 Python : Repl.it - 공부5 (답안 비교)
